--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
+
 <head>
-  <lang="ja">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+
   <meta property='og:type' content='website'>
   <meta property='og:title' content='TSUBASA OMORI ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
@@ -21,11 +21,9 @@
   <link rel="stylesheet" href="css/animate.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@500&display=swap');
-    </style>
+  </style>
 </head>
-  
-</body>
-</html>
+
 <body>
   <div class="wrapper">
 
@@ -54,124 +52,138 @@
     </div>
     <!-- /.header -->
     <div class="milkyWay">
-    <main class="content">
-      <!-- .works-section -->
-      <section class="works-section section" id="works-section">
-        <div class="inner">
-          <div class="section-heading">
-            <h2 class="heading-primary">WORKS</h2>
-          </div>
-          <div class="section-lead">
-            <p>製作の記録。<br></p>
-          </div>
-          <div class="section-body works">
-            <div class="works-list js-my-gallery">
-
-              <figure class="works-item">
-                <a href="img/works/tasklist.png" data-size="800x800" class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/tasklist.png" alt="" />
-                </a>
-                <figcaption class="works-body">
-                  <div class="works-title">タスク管理アプリ
-                  </div>
-                  <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL</div>
-                  <div class="works-url"><a class="works-url-link" href="https://tasklist-tsubasan1.herokuapp.com/" target="_blank">Link</a>
-                  </div>
-                </figcaption>
-              </figure>
-
-              <figure class="works-item">
-                <a href="img/works/Twitterclone.png" data-size="800x800"
-                  class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/Twitterclone.png" alt="" />
-                </a>
-               <figcaption class="works-body">
-                  <div class="works-title">Twitterクローン</div>
-                  <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL </div>
-                  <div class="works-url"><a class="works-url-link" href="https://twitter-mitai.herokuapp.com/" target="_blank">Link</a>
-                  </div>
-                </figcaption>
-              </figure>
-
-              <figure class="works-item">
-                <a href="img/works/dentak.png" data-size="800x800" class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/dentak.png" alt="" />
-                </a>
-                <figcaption class="works-body">
-                  <div class="works-title">Web電卓</div>
-                  <div class="works-text">HTML5 / CSS3 / JavaScript </div>
-                  <div class="works-url"><a class="works-url-link" href="web-dentak/index.html" target="_blank">Link</a>
-                  </div>
-                </figcaption>
-              </figure>
-
-              <figure class="works-item">
-                <a href="img/works/bookshelf.PNG" data-size="800x800" class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/bookshelf.PNG" alt="" />
-                </a>
-                <figcaption class="works-body">
-                  <div class="works-title">みんなのオンライン本棚</div>
-                  <div class="works-text">HTML5/ CSS3 / jQuery /<br> Bootstrap / firebase </div>
-                  <div class="works-url"><a class="works-url-link" href="bookshelf/index.html" target="_blank">Link</a>
-                  </div>
-                </figcaption>
-              </figure>
-
-              <figure class="works-item">
-                <a href="img/works/chat.PNG" data-size="800x800" class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/chat.PNG" alt="" />
-                </a>
-                <figcaption class="works-body">
-                  <div class="works-title">リアルチャット</div>
-                  <div class="works-text">HTML5/ CSS3 / JavaScript / jQuery /<br> Bootstrap / firebase / Ajax</div>
-                  <div class="works-url"><a class="works-url-link" href="rialtime-chat/index.html" target="_blank">Link</a>
-                  </div>
-                </figcaption>
-              </figure>
-
-            </div>
-          </div>
-        </div>
-      </section>
-      </div>
-      <!-- /.works-section -->
-      <!-- .feature-section -->
-      <div class="fullMoon">
-        <section class="feature-section section" id="feature-section">
-          
+      <main class="content">
+        <!-- .works-section -->
+        <section class="works-section section" id="works-section">
           <div class="inner">
             <div class="section-heading">
-              <h2 class="heading-primary">FEATURE</h2>
+              <h2 class="heading-primary">WORKS</h2>
             </div>
             <div class="section-lead">
-              <p>
-                人生初、オリジナルサイトの解説
-              </p>
+              <p>製作の記録。<br></p>
             </div>
-            <div class="section-body feature">
-              <div class="feature-item">
-                <div class="feature-image-wrapper">
-                  <a href="https://bookoutput283.herokuapp.com/" target="_blank" class="hover-action"><img class="feature-image"
-                      src="img/feature/bookoutputs.png" alt=""></a>
-                </div>
-                <div class="feature-body">
-                  <p>
-                    <span class="text-bold">サイト名：</span><br>読書記録アプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">Link</a></p>
-                  <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 / jQuery / Bootstrap<br>PHP / Laravel / MySQL / S3(AWS)
-                  <p><span
-                      class="text-bold"></span>コンセプト：<br>読書後、感動した言葉を記録し、今後の目標を立てるアプリ。
-                  </p>
-                  <p>一人でも多くの人が、『形に残る読書』ができますように。。。</p>
-                </div>
+            <div class="section-body works">
+              <div class="works-list js-my-gallery">
+
+                <figure class="works-item">
+                  <a href="img/works/tasklist.png" data-size="800x800"
+                    class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png"
+                      data-src="img/works/tasklist.png" alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">タスク管理アプリ
+                    </div>
+                    <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL</div>
+                    <div class="works-url"><a class="works-url-link" href="https://tasklist-tsubasan1.herokuapp.com/"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
+                <figure class="works-item">
+                  <a href="img/works/Twitterclone.png" data-size="800x800"
+                    class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png"
+                      data-src="img/works/Twitterclone.png" alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">Twitterクローン</div>
+                    <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL </div>
+                    <div class="works-url"><a class="works-url-link" href="https://twitter-mitai.herokuapp.com/"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
+                <figure class="works-item">
+                  <a href="img/works/dentak.png" data-size="800x800"
+                    class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png"
+                      data-src="img/works/dentak.png" alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">Web電卓</div>
+                    <div class="works-text">HTML5 / CSS3 / JavaScript </div>
+                    <div class="works-url"><a class="works-url-link" href="web-dentak/index.html"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
+                <figure class="works-item">
+                  <a href="img/works/bookshelf.PNG" data-size="800x800"
+                    class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png"
+                      data-src="img/works/bookshelf.PNG" alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">みんなのオンライン本棚</div>
+                    <div class="works-text">HTML5/ CSS3 / jQuery /<br> Bootstrap / firebase </div>
+                    <div class="works-url"><a class="works-url-link" href="bookshelf/index.html"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
+                <figure class="works-item">
+                  <a href="img/works/chat.PNG" data-size="800x800" class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/chat.PNG"
+                      alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">リアルチャット</div>
+                    <div class="works-text">HTML5/ CSS3 / JavaScript / jQuery /<br> Bootstrap / firebase / Ajax</div>
+                    <div class="works-url"><a class="works-url-link" href="rialtime-chat/index.html"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
               </div>
             </div>
           </div>
         </section>
-      </div>
-      <!-- /.feature-section -->
+    
+    <!-- /.works-section -->
+    <!-- .feature-section -->
+    <div class="fullMoon">
+      <section class="feature-section section" id="feature-section">
 
-      <!-- .about-section -->
-      <div class="milkyWay">
+        <div class="inner">
+          <div class="section-heading">
+            <h2 class="heading-primary">FEATURE</h2>
+          </div>
+          <div class="section-lead">
+            <p>
+              人生初、オリジナルサイトの解説
+            </p>
+          </div>
+          <div class="section-body feature">
+            <div class="feature-item">
+              <div class="feature-image-wrapper">
+                <a href="https://bookoutput283.herokuapp.com/" target="_blank" class="hover-action"><img
+                    class="feature-image" src="img/feature/bookoutputs.png" alt=""></a>
+              </div>
+              <div class="feature-body">
+                <p>
+                  <span class="text-bold">サイト名：</span><br>読書記録アプリ<br><a href="https://bookoutput283.herokuapp.com/"
+                    target="_blank">Link</a></p>
+                <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 / jQuery / Bootstrap<br>PHP / Laravel / MySQL /
+                  S3(AWS)
+                <p><span class="text-bold"></span>コンセプト：<br>読書後、感動した言葉を記録し、今後の目標を立てるアプリ。
+                </p>
+                <p>一人でも多くの人が、『形に残る読書』ができますように。。。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <!-- /.feature-section -->
+
+    <!-- .about-section -->
+    <div class="milkyWay">
       <section class="about-section section" id="about-section">
         <div class="inner">
           <div class="section-heading">
@@ -185,7 +197,7 @@
           <div class="section-body about">
             <div class="about-item">
               <div class="about-image-wrapper">
-                <img class="about-image lazyload fadein" data-src="img/about/Profile.png" alt="">
+                <img class="about-image lazyload fadein" src="img/about/Profile.png" alt="写真">
               </div>
               <div class="about-body">
                 <p>
@@ -201,78 +213,78 @@
         </div>
       </section>
     </div>
-      <!-- /.about-section -->
+    <!-- /.about-section -->
 
-      <!-- .skill-section -->
-      <div class="fullMoon">
-        <section class="skill-section section" id="skill-section">
-          <div class="inner">
-            <div class="section-heading">
-              <h2 class="heading-primary">SKILL</h2>
-            </div>
-            <div class="section-lead">
-              <p>
-                言語・開発環境・DB・フレームワーク・その他
+    <!-- .skill-section -->
+    <div class="fullMoon">
+      <section class="skill-section section" id="skill-section">
+        <div class="inner">
+          <div class="section-heading">
+            <h2 class="heading-primary">SKILL</h2>
+          </div>
+          <div class="section-lead">
+            <p>
+              言語・開発環境・DB・フレームワーク・その他
+            </p>
+          </div>
+          <div class="section-body skill">
+            <div class="php-list">
+              <p><br>●PHP/Laravelコース
+                <br>
+                <br>【スキル】
+                <br>言語：PHP、HTML5、CSS3
+                <br>開発環境：Cloud9、Linux、Heroku、Git/GitHub
+                <br>DB：MySQL
+                <br>フレームワーク：Laravel、Bootstrap
+                <br>ストレージ：S3(AWS)
+                <br>
+                <br>
+                <br>【学習内容】
+                <br>・HTML/CSSの基本・PHPの基礎
+                <br>　- 文法の基礎
+                <br>　- ターミナルを使用してPHPを自動実行
+                <br>　- フォームデータの送受信
+                <br>　- オブジェクト
+                <br>　- 複数ファイルの連携
+                <br>　- 名前空間
+                <br>・MySQLの基礎
+                <br>　- データベースの作成
+                <br>　- テーブルの作成/操作/分析/結合
+                <br>・PHP+MySQL
+                <br>　- PHPとMySQLの連携
+                <br>・Git/GitHubの基本
+                <br>・Bootstrapの使用
+                <br>・Laravelでの開発
+                <br>・Herokuの使用
+              </p>
+              <p><br>●フロントエンドコース
+                <br>
+                <br>【スキル】
+                <br>言語：JavaScript、HTML5、CSS3
+                <br>開発環境：Cloud9、Firebase、Vue.js
+                <br>DB：Firebase
+                <br>フレームワーク：jQuery、Bootstrap
+                <br>その他：Web API(Flicker API) + Ajax
+                <br>
+                <br>
+                <br>【学習内容】
+                <br>・Webサイト制作の流れ
+                <br>・HTML/CSSの基本
+                <br>・JavaScriptの文法
+                <br>・エラーとデバッグ
+                <br>・jQueryの基本
+                <br>・DOMの操作
+                <br>・Bootstrapの使用
+                <br>・外部ライブラリの利用
+                <br>・Web API
+                <br>・BaaSの使用
               </p>
             </div>
-            <div class="section-body skill">
-              <div class="php-list">  
-                  <p><br>●PHP/Laravelコース
-                    <br>
-                    <br>【スキル】
-                    <br>言語：PHP、HTML5、CSS3
-                    <br>開発環境：Cloud9、Linux、Heroku、Git/GitHub
-                    <br>DB：MySQL
-                    <br>フレームワーク：Laravel、Bootstrap 
-                    <br>ストレージ：S3(AWS) 
-                    <br>
-                    <br>
-                    <br>【学習内容】
-                    <br>・HTML/CSSの基本・PHPの基礎
-                    <br>　- 文法の基礎
-                    <br>　- ターミナルを使用してPHPを自動実行
-                    <br>　- フォームデータの送受信
-                    <br>　- オブジェクト
-                    <br>　- 複数ファイルの連携
-                    <br>　- 名前空間
-                    <br>・MySQLの基礎
-                    <br>　- データベースの作成
-                    <br>　- テーブルの作成/操作/分析/結合
-                    <br>・PHP+MySQL
-                    <br>　- PHPとMySQLの連携
-                    <br>・Git/GitHubの基本
-                    <br>・Bootstrapの使用
-                    <br>・Laravelでの開発
-                    <br>・Herokuの使用
-                  </p>
-                  <p><br>●フロントエンドコース
-                    <br>
-                    <br>【スキル】
-                    <br>言語：JavaScript、HTML5、CSS3
-                    <br>開発環境：Cloud9、Firebase、Vue.js
-                    <br>DB：Firebase
-                    <br>フレームワーク：jQuery、Bootstrap
-                    <br>その他：Web API(Flicker API) + Ajax
-                    <br>
-                    <br>
-                    <br>【学習内容】
-                    <br>・Webサイト制作の流れ
-                    <br>・HTML/CSSの基本
-                    <br>・JavaScriptの文法
-                    <br>・エラーとデバッグ
-                    <br>・jQueryの基本
-                    <br>・DOMの操作
-                    <br>・Bootstrapの使用
-                    <br>・外部ライブラリの利用
-                    <br>・Web API
-                    <br>・BaaSの使用
-                  </p>
-                </div>
-            </div>
           </div>
-        </section>
-      </div>
-    </main>
+        </div>
+      </section>
+    </div>
+  </main>
 
     <!-- .footer -->
     <footer class="footer">
@@ -354,6 +366,7 @@
     </div>
 
   </div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/photoswipe/photoswipe.min.js"></script>
   <script src="js/photoswipe/photoswipe-ui-default.js"></script>
@@ -362,4 +375,5 @@
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
 </body>
+
 </html>
