--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-
   <meta property='og:type' content='website'>
   <meta property='og:title' content='TSUBASA OMORI ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
@@ -91,6 +90,21 @@
                     <div class="works-title">Twitterクローン</div>
                     <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL </div>
                     <div class="works-url"><a class="works-url-link" href="https://twitter-mitai.herokuapp.com/"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
+                <figure class="works-item">
+                  <a href="img/works/omikuji.PNG" data-size="800x800"
+                    class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png"
+                      data-src="img/works/omikuji.PNG" alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">おみくじ</div>
+                    <div class="works-text">HTML5 / CSS3 / JavaScript / Animate.css</div>
+                    <div class="works-url"><a class="works-url-link" href="MyOmikuji/index.html"
                         target="_blank">Link</a>
                     </div>
                   </figcaption>
