--- a/index.html
+++ b/index.html
@@ -146,9 +146,23 @@
                       alt="" />
                   </a>
                   <figcaption class="works-body">
-                    <div class="works-title">リアルチャット</div>
+                    <div class="works-title">リアルタイムチャット</div>
                     <div class="works-text">HTML5/ CSS3 / JavaScript / jQuery /<br> Bootstrap / firebase / Ajax</div>
                     <div class="works-url"><a class="works-url-link" href="rialtime-chat/index.html"
+                        target="_blank">Link</a>
+                    </div>
+                  </figcaption>
+                </figure>
+
+                <figure class="works-item">
+                  <a href="img/works/everydaygrowing.PNG" data-size="800x800" class="works-image-wrapper works-link hover-action">
+                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/everydaygrowing.PNG"
+                      alt="" />
+                  </a>
+                  <figcaption class="works-body">
+                    <div class="works-title">成長記録サイト</div>
+                    <div class="works-text">HTML5/ CSS3 / JavaScript / <br>jQuery / firebase / </div>
+                    <div class="works-url"><a class="works-url-link" href="EverydayGrowing/index.html"
                         target="_blank">Link</a>
                     </div>
                   </figcaption>
