--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     <div class="fullMoon">
       <header class="header">
         <h1 class="logo">
+          <span class="logo-title animate__fadeInDown">PORTFOLIO</span>
+          <span class="logo-subtitle">of</span>
           <span class="logo-title animate__fadeInDown">TSUBASA OMORI</span>
-          <span class="logo-subtitle">PORTFOLIO</span>
         </h1>
       </header>
     </div>
@@ -248,7 +249,7 @@
       <section class="skill-section section" id="skill-section">
         <div class="inner">
           <div class="section-heading">
-            <h2 class="heading-primary">SKILL</h2>
+            <h2 class="heading-primary">SKILL&STUDY</h2>
           </div>
           <div class="section-lead">
             <p>
